Added current Taskforce members as well as editing and deleting features.

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,9 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
+            <img src="{{ url_for('static', filename='Taskforce_logo.jpg') }}" alt="">
             <a class="navbar-brand" href="{{ url_for('home') }}">
-                <i class="fas fa-shield-alt me-2"></i>Taskforce Management
+                Taskforce Management
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
