--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -120,6 +120,9 @@
                     <a href="{{ url_for('promote_member') }}" class="btn btn-info">
                         <i class="fas fa-arrow-up me-2"></i>Change Member Rank
                     </a>
+                    <a href="{{ url_for('members') }}" class="btn btn-secondary">
+                        <i class="fas fa-users-cog me-2"></i>Manage Members
+                    </a>
                     <a href="{{ url_for('members') }}" class="btn btn-outline-primary">
                         <i class="fas fa-search me-2"></i>Search Members
                     </a>
