--- a/templates/promote_member.html
+++ b/templates/promote_member.html
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="mb-4">
-                        <label for="promoted_by" class="form-label">Promoted By <span class="text-danger">*</span></label>
+                        <label for="promoted_by" class="form-label">Modified By <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" id="promoted_by" name="promoted_by" required 
                                placeholder="Your username">
                         <div class="form-text">Enter your Discord username</div>
