--- a/templates/member_detail.html
+++ b/templates/member_detail.html
@@ -21,6 +21,8 @@
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{{ url_for('log_activity') }}?member_id={{ member.id }}">Log Activity</a></li>
                 <li><a class="dropdown-item" href="{{ url_for('promote_member') }}?member_id={{ member.id }}">Promote/Demote</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('edit_member', member_id=member.id) }}">Edit Member</a></li>
+                <li><a class="dropdown-item text-danger" href="{{ url_for('delete_member', member_id=member.id) }}">Remove Member</a></li>
             </ul>
         </div>
     </div>
