Addec Activity Check features and fixed some bugs

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ url_for('add_member') }}">Add Member</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('log_activity') }}">Log Activity</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('ac_quick_log') }}">Quick AC log</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('promote_member') }}">Promote Member</a></li>
                         </ul>
                     </li>
