--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -126,6 +126,9 @@
                     <a href="{{ url_for('members') }}" class="btn btn-outline-primary">
                         <i class="fas fa-search me-2"></i>Search Members
                     </a>
+                    <a href="{{ url_for('ac_dashboard') }}" class="btn btn-outline-secondary">
+                        <i class="fas fa-clipboard-list me-2"></i>Activity Checks
+                    </a>
                 </div>
             </div>
         </div>
