--- a/templates/add_member.html
+++ b/templates/add_member.html
@@ -1,65 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Add Member - Taskforce Management{% endblock %}
+{% block title %}Add Member{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-header">
-                <h4 class="mb-0">
-                    <i class="fas fa-user-plus me-2"></i>Add New Member
-                </h4>
-            </div>
-            <div class="card-body">
-                <form method="POST">
-                    <div class="mb-3">
-                        <label for="roblox_username" class="form-label">Roblox Username</label>
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="fas fa-gamepad"></i></span>
-                            <input type="text" class="form-control" id="roblox_username" name="roblox_username" placeholder="username">
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="discord_username" class="form-label">Discord Username <span class="text-danger">*</span></label>
-                        <div class="input-group">
-                            <span class="input-group-text"><i class="fab fa-discord"></i></span>
-                            <input type="text" class="form-control" id="discord_username" name="discord_username" required placeholder="username">
-                        </div>
-                        <div class="form-text">Optional - can be added later</div>
-                        <div class="form-text">Enter the Discord username without @</div>
-                    </div>
-
-                    
-
-                    <div class="mb-4">
-                        <label for="current_rank" class="form-label">Starting Rank</label>
-                        <select class="form-select" id="current_rank" name="current_rank">
-                            <option value="Aspirant" selected>Aspirant</option>
-                            <option value="Novice">Novice</option>
-                            <option value="Adept">Adept</option>
-                            <option value="Crusader">Crusader</option>
-                            <option value="Paladin">Paladin</option>
-                            <option value="Exemplar">Exemplar</option>
-                            <option value="Prospect">Prospect</option>
-                            <option value="Commander">Commander</option>
-                            <option value="Marshall">Marshall</option>
-                            <option value="General">General</option>
-                            <option value="Chief General">Chief General</option>
-                        </select>
-                    </div>
-
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="{{ url_for('members') }}" class="btn btn-outline-secondary me-md-2">
-                            <i class="fas fa-times me-2"></i>Cancel
-                        </a>
-                        <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-save me-2"></i>Add Member
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+<h3>Add Member</h3>
+<form method="post">
+  <div class="mb-3"><label>Discord</label><input name="discord_username" class="form-control" required></div>
+  <div class="mb-3"><label>Roblox</label><input name="roblox_username" class="form-control"></div>
+  <div class="mb-3"><label>Rank</label><input name="current_rank" class="form-control" value="Aspirant"></div>
+  <button class="btn btn-primary" type="submit">Create</button>
+</form>
 {% endblock %}
