--- a/templates/edit_member.html
+++ b/templates/edit_member.html
@@ -7,7 +7,14 @@
 <form method="post">
   <div class="mb-3"><label>Discord</label><input name="discord_username" class="form-control" value="{{ member.discord_username }}"></div>
   <div class="mb-3"><label>Roblox</label><input name="roblox_username" class="form-control" value="{{ member.roblox_username }}"></div>
-  <div class="mb-3"><label>Rank</label><input name="current_rank" class="form-control" value="{{ member.current_rank }}"></div>
+  <div class="mb-3">
+    <label>Rank</label>
+    <select name="current_rank" class="form-select">
+      {% for rank in available_ranks %}
+        <option value="{{ rank }}" {% if member.current_rank == rank %}selected{% endif %}>{{ rank }}</option>
+      {% endfor %}
+    </select>
+  </div>
   <button class="btn btn-primary" type="submit">Save</button>
   <a class="btn btn-secondary" href="{{ url_for('member_detail', member_id=member.id) }}">Cancel</a>
 </form>
